@@ -1,3 +1,7 @@
+2004-10-14  Richard Hult  <richard@imendio.com>
+
+	* sv.po: Update.
+
 2004-10-14  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Jan-Willem Harmanny.
