@@ -1,3 +1,8 @@
+2004-10-14  Richard Hult  <richard@imendio.com>
+
+	* src/planner-html-plugin.c: (html_plugin_export): Fill in a
+	default filename.
+
 2004-10-13  Richard Hult  <richard@imendio.com>
 
 	* src/planner-*-view.c: Grab focus on activate so we don't
